2.1.1.dev0
 * #1241: For the "recreate" action, actually pass the "--dry-run" flag through to Borg instead of
   just skipping the Borg call.
 * #1242: Fix a regression in which the "spot" check hung while collecting archive contents.
 * #1245: Fix a regression in which the KeePassXC credential hook password prompt was invisible.

2.1.0
 * TL;DR: Many logging, memory, and performance improvements. Mind those breaking changes!
 * #485: When running commands (database clients, command hooks, etc.), elevate stderr output to
   show up as borgmatic error logs.
 * #858: With the "--log-json" flag, log borgmatic's own logs as JSON, not just Borg's.
 * #1092: BREAKING: Treat most Borg warnings as errors by default, so for instance backups now fail
   when source directories are missing. You can still override this behavior with the
   "borg_exit_codes" option. See the documentation for more information:
   https://torsion.org/borgmatic/how-to/customize-warnings-and-errors/
 * #1092: Deprecate the "source_directories_must_exist" option, as borgmatic now treats "backup file
   not found" warnings from Borg as errors, which accomplishes the same thing.
 * #1132: BREAKING/SECURITY: For the Healthchecks, Apprise, Pagerduty, and Loki monitoring hooks,
   disable log sending when not explicitly enabled. This avoids revealing private log information to
   third-party services. To send logs anyway, set the monitoring hook's "send_logs" option to
   "true".
 * #1204: When verbosity levels differ between console/monitoring/syslog/file, log Borg's output to
   each one at a different level. Previously, it was logged at the maximum level of all the
   verbosities.
 * #1208: Fix for the "restore" action incorrectly extracting more database dumps than the
   "--database" flag specifies.
 * #1210: Fix an error when running the "spot" check or "extract" action with the "progress" option
   or "--progress" flag.